Add css and change pages design

--- a/hw17_modern_web_react/public/index.html
+++ b/hw17_modern_web_react/public/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+<!--suppress HtmlUnknownTarget -->
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <!--suppress HtmlUnknownTarget -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link href="%PUBLIC_URL%/base.css" rel="stylesheet"/>
+    <link href="%PUBLIC_URL%/table.css" rel="stylesheet"/>
     <meta
             name="description"
             content="React.js books homework"
